Endret FødselsnummerGenerator til å maks antall genereringsforsøk og andre div smårettinger